- Postfix network added to docker-compose examples
- Wordpress permissions runs on start now
- Modsecurity changed from DetectionOnly to On
- Mosecurity debug log level changed to 0 and output to stderr
- Permissions script now runs once a day rather than hourly
- Domain restrictions removed from postfix configuration
- Added option to whitelist IP addresses for basic auth in .env file

v1.0.16
=======
- Added environment variable for modsecurity engine mode to webserver
- Added whitelist file to modsecurity configuration to webserver

v1.0.17
=======
- Changed wp command utility owner from root:root to root:www-data in wordpress image
- Extra hardening measures added to webserver build
   -> block_ext.conf
   -> block_non_english_chars.conf
   -> block_http_ref.conf
   -> block_files.txt
   -> block_req_methods.conf
   -> block_suspicious_query.conf
   -> custom_error.conf
   -> civicrm.conf
   -> headers.conf
   -> wordpress.conf
   -> ssl.conf
   -> error.html
   -> block_user_agents.conf
- Pre-build config reorg for webserver directory

v1.0.18
=======
- Added server_names_hash_bucket_size to nginx.conf
- Added referer_hash_bucket_size to default.conf

v1.0.19
=======
- changed permissions for wflogs dir - wordfence plugin

v1.0.20
=======
- Added Drupal image
- Added Memcache image (for drupal)
- Added DISABLE_CONF environment variable to nginx-modsec

v1.0.21
======
- Added upgrade steps to upgrade all packages in images on build (excluding those that must be fixed for a specific image, e.g. mariadb)

v1.0.22
=======
- ClamAV integration
- CVE-2020-10543 resolved in nginx-modsec
- CVE-2020-12723 resolved in nginx-modsec
- CVE-2020-13790 resolved in nginx-modsec

v1.0.23 (latest)
=======
- postfix updated to alpine 3.12
- memcache updated to alpine 3.12
- mariadb-alpine updated to alpine 3.12
- update script added to Drupal, so Drupal is upgraded at runtime if image is newer version
- CVE-2020-14422 vulnebility resolved in postfix